<resources>
    <string name="app_name">MOSIS_17928</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Already have an account? Click here to login!</string>
    <string name="click_here_to_register">Don\'t have an account? Click here to register!</string>
    <string name="logout">Logout</string>
    <string name="currently_logged_in_as">Currently logged in as:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_map">Open map</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="add">Add</string>
    <string name="start">Start</string>
    <string name="find_places">Find places</string>
    <string name="scores">Scores</string>
</resources>